--- a/index.html
+++ b/index.html
@@ -7,80 +7,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" />
-
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" crossorigin="anonymous">
     <title>Work Day Scheduler</title>
 
 </head>
 
-<body>
+    <body>
+        <!-- HEADER -->
+        <header class="jumbotron">
+            <h1 class="display-3">Work Day Scheduler</h1>
+            <p class="lead">A simple calendar app for scheduling your work day</p>
+            <p id="currentDay" class="lead"></p>
+          </header>
 
-    <header class="jumbotron jumbotron-fluid mb-0">
-        <div class="container">
-            <h1 class="display-4">Work Day Scheduler</h1>
-            <p>Plan your work day</p>
-            <h2 id="dt" class="dt"></h2>
-            <p class="lead" id="dt"></p>
-            <p class="lead" id="deltadt"></p>
-        </div>
-    </header>
-<!-- 
- 
-     <div class="01 modal-container">
-        <div class="modal">
-      </div>
-        <div>
-        <select id="end-select" class="col-1">
-            <option value="05 AM">0500</option>
-            <option value="06 AM">0600</option>
-            <option value="07 AM">0700</option>
-            <option value="08 AM">0800</option>
-            <option value="09 AM">0900</option>
-            <option value="10 AM">1000</option>
-            <option value="10 AM">1100</option>
-            <option value="10 AM">1200</option>
-            <option value="10 AM">1300</option>
-            <option value="10 AM">1400</option>
-            <option value="10 AM">1500</option>
-            <option value="10 AM">1600</option>
-            <option value="10 AM">1700</option>
-            <option value="10 AM">1800</option>
-            <option value="10 AM">1900</option>
-            <option value="10 AM">2000</option>
-        </div>
-    </div>
-        <section class="user-input">
-            <div class="input-container"></div>
-                <div class="form">
-                    <div class="timeBlockRow" class="col-8" id="one">
-                        <form class="col-8">
-                            <label class="fname">Enter your task & Submit</label>
-                            <input type="text" id="fname" name="Tasks..." placeholder="..."> 
-                        </form>
-                        <button class="btn col-md-1" id="five"><i class="fa fa-save"><p class="btn-text" id="submit">Submit</p></i></button>
-                    </div>    
-                </div>    
-            </div>    
-        </div>
-    </div>
-    </br>              -->
+          <!-- TIME BLOCKS -->
+          <div class="container">
+            <div class="row">
+              <p id="9" class="col-1 hour">9am</p>
+              <textarea class="col-10" id="9am" attr="9"></textarea>
+              <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+            </div>
+            <div class="row">
+                <p class="col-1 hour">10AM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">11AM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">12PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">1PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">2PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">3PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">4PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">5PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">6PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">7PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">8PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+              </div>
+              <div class="row">
+                <p class="col-1 hour">9PM</p>
+                <textarea class="col-10" id="9am" attr="9"></textarea>
+                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></i></button>
+              </div>
 
-    <div class="container" style="padding: 100px 5px 5px 5px">
-        <div class="row">
-            <div class="col-1 sm hour">0500</div>
-            <textarea class="col-8 input complete"></textarea>
-            <button class="col-1 savebtn"><i class="bi bi-save2-fill"></i></button>
-            <button class="col-1 deletebtn"><i class="bi bi-x-square"></i></button>
-        </div>
-    </div>
-
-
+    <!-- LINK JS TO HTML -->
     <script src="https://code.jquery.com/jquery-3.4.1.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/script.js"></script>
-            
+    <script src="./assets/js/script.js"></script>
+
     </body>
 
 </html>
