--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
             <p id="currentDay" class="lead"></p>
           </header>
 
+
           <!-- TIME BLOCKS -->
           <div class="container">
             <div class="row">
-              <p id="9" class="col-1 hour">9am</p>
+              <p id="9" class="col-1 hour">9:00AM</p>
               <textarea class="col-10" id="9am" attr="9"></textarea>
               <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
             </div>
             <div class="row">
-                <p class="col-1 hour">10AM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
-              <div class="row">
-                <p class="col-1 hour">11AM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
-              <div class="row">
+              <p id="10" class="col-1 hour">10:00AM</p>
+              <textarea class="col-10" id="9am" attr="9"></textarea>
+              <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+            </div>
+            <div class="row">
+              <p id="11" class="col-1 hour">11:00AM</p>
+              <textarea class="col-10" id="9am" attr="9"></textarea>
+              <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
+            </div>
+              <!-- <div class="row">
                 <p class="col-1 hour">12PM</p>
                 <textarea class="col-10" id="9am" attr="9"></textarea>
                 <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
@@ -88,7 +89,8 @@
                 <p class="col-1 hour">9PM</p>
                 <textarea class="col-10" id="9am" attr="9"></textarea>
                 <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></i></button>
-              </div>
+              </div> -->
+
 
     <!-- LINK JS TO HTML -->
     <script src="https://code.jquery.com/jquery-3.4.1.js" crossorigin="anonymous"></script>
