--- a/index.html
+++ b/index.html
@@ -2,120 +2,113 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" />
   <link rel="stylesheet" href="./assets/style/style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" crossorigin="anonymous">
-  <title>Work Day Scheduler</title>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"  type="text/javascript"></script> 
+  <link  href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet" crossorigin="anonymous">
+  <title>Work Day Scheduler </title>
 </head>
 
-<body>
-  <!-- HEADER -->
-  <header class="jumbotron">
-    <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
-    <h4 id="currentDay" class="lead"></h4>
-  </header>
+<!-- Work Dat Scheduler By: Vince 🐢 -->
 
+<!-- <div class="test">Hello</div> -->
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3" id="block-time">Work Day Scheduler</h1>
+    <h6 class="lead">A simple calendar app for scheduling your work day</h6>
+    <h4 id="currentDay" style="font-size: 35px; margin-top: 35px; color:darkmagenta"></h4>
+  </header>
 
   <!-- TIME BLOCKS -->
   <div class="container">
 
     <div class="row">
-      <div class="col-1 hour" id="9" >
-        9AM
-      </div>
-      <textarea class="col-10" id="9am" attr="9"></textarea>
-      <button class="col-1 saveBtn"><i class="fa fa-save color"></i></button>
+      <p class="col-1 block" id="9">9AM</p>
+      <textarea class="col-10 block" id="task"></textarea>
+      <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color"></i></button>
     </div>
 
     <div class="row">
-      <div id="10" class="col-1 hour">
-        10AM
-      </div>
-      <textarea class="col-10" id="9am" attr="9"></textarea>
-      <button class="col-1 saveBtn"><i class="fa fa-save color"></i></button>
+      <p class="col-1 block" id="10">10AM</p>
+      <textarea class="col-10 block" id="task" ></textarea>
+      <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color"></i></button>
     </div>
 
     <div class="row">
-      <div id="11" class="col-1 hour">
-        11AM
-      </div>
-      <textarea class="col-10" id="9am" attr="9"></textarea>
-      <button class="col-1 saveBtn"><i class="fa fa-save color"></i></button>
+      <p class="col-1 block" id="11">11AM</p>
+      <textarea class="col-10" id="task" ></textarea>
+      <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color"></i></button>
     </div>
 
-    <!-- <div class="row">
-                <p class="col-1 hour">12PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+        <div class="row">
+        <p class="col-1 block" id="12">12PM</p>
+        <textarea class="col-10" id="task"></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">1PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="1">1PM</p>
+        <textarea class="col-10" id="task" ></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">2PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="2">2PM</p>
+        <textarea class="col-10 " id="task" ></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">3PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="3">3PM</p>
+        <textarea class="col-10 " id="task" ></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">4PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="4">4PM</p>
+        <textarea class="col-10" id="task"></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">5PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="5">5PM</p>
+        <textarea class="col-10" id="task" ></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">6PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="6">6PM</p>
+        <textarea class="col-10" id="task"></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">7PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="7">7PM</p>
+        <textarea class="col-10" id="task"></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">8PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></button>
-              </div>
+      <div class="row">
+        <p class="col-1 block" id="8">8PM</p>
+        <textarea class="col-10" id="task" ></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
-              <div class="row">
-                <p class="col-1 hour">9PM</p>
-                <textarea class="col-10" id="9am" attr="9"></textarea>
-                <button class="col-1 saveBtn"><i class="fa fa-save color" ></i></i></button>
-              </div> -->
+      <div class="row">
+        <p class="col-1 block" id="9">9PM</p>
+        <textarea class="col-10" id="task"></textarea>
+        <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color" ></i></button>
+      </div>
 
 
     <!-- LINK JS TO HTML -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.js" crossorigin="anonymous"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://kit.fontawesome.com/a2e3a24933.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 
 </body>
-
 </html>
