--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
   <header class="jumbotron">
     <h1 class="display-3" id="block-time">Work Day Scheduler</h1>
     <h6 class="lead">A simple calendar app for scheduling your work day</h6>
-    <h4 id="currentDay" style="font-size: 35px; margin-top: 35px; color:darkmagenta"></h4>
+    <!-- <h4 id="currentDay" style="font-size: 35px; margin-top: 35px; color:darkmagenta"></h4> -->
   </header>
+
+  <h4 id="currentDay"></h4>
 
   <!-- TIME BLOCKS -->
   <div class="container">
 
     <div class="row">
       <p class="col-1 block" id="9">9AM</p>
-      <textarea class="col-10 block" id="task"></textarea>
+      <textarea class="col-10 block" id="task" ></textarea>
       <button class="col-1 saveBtn" id="btn"><i class="fa fa-save color"></i></button>
     </div>
 
